# rust_newsletter

./: Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20251119003450_create_subscriptions_table.sql  20251130072052_make_status_not_null_in_subscriptions.sql  20251130072239_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
