[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.12.0"
chrono = "0.4.42"
config = "0.15.19"
once_cell = "1.21.3"
rand = { version = "0.9.2", features = ["std_rng"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.18.1", features = ["v4"] }
validator = "0.20.0"

[dev-dependencies]
claim = "0.5.0"
fake = "~2.3"
linkify = "0.10.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.145"
wiremock = "0.6.5"

[profile.dev]
incremental = true
